Fix avatar size when we are on small devices

--- a/src/main/resources/app/css/index.css
+++ b/src/main/resources/app/css/index.css
@@ -129,3 +129,7 @@ div.conflinks a {
 svg a:hover ellipse {
     fill: #23527C;
 }
+
+div.event img.avatar {
+    max-height: 256px;
+}
